@@ -1,22 +1,20 @@
 package it.gov.pagopa.pu.workflow.wf.classification.iuf.classification;
 
 import io.temporal.spring.boot.WorkflowImpl;
-import it.gov.pagopa.payhub.activities.activity.classifications.*;
+import it.gov.pagopa.payhub.activities.activity.classifications.ClearClassifyIufActivity;
+import it.gov.pagopa.payhub.activities.activity.classifications.IufClassificationActivity;
 import it.gov.pagopa.payhub.activities.dto.classifications.IufClassificationActivityResult;
-import it.gov.pagopa.payhub.activities.dto.classifications.Transfer2ClassifyDTO;
+import it.gov.pagopa.pu.workflow.wf.classification.iuf.activity.StartTransferClassificationActivity;
+import it.gov.pagopa.pu.workflow.wf.classification.iuf.config.IufClassificationWfConfig;
 import it.gov.pagopa.pu.workflow.wf.classification.iuf.dto.IufClassificationNotifyPaymentsReportingSignalDTO;
 import it.gov.pagopa.pu.workflow.wf.classification.iuf.dto.IufClassificationNotifyTreasurySignalDTO;
-import it.gov.pagopa.pu.workflow.wf.classification.iuf.config.IufClassificationWfConfig;
-import it.gov.pagopa.pu.workflow.wf.classification.iuf.activity.StartTransferClassificationActivity;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeansException;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 
 import static it.gov.pagopa.pu.workflow.wf.ingestionflow.paymentsreporting.wfingestion.PaymentsReportingIngestionWFImpl.TASK_QUEUE;
 
@@ -33,7 +31,7 @@ public class IufClassificationWFImpl implements IufClassificationWF, Application
 
   private StartTransferClassificationActivity startTransferClassificationActivity;
 
-  List<IufClassificationActivityResult> toNotify = new ArrayList<>();;
+  List<IufClassificationActivityResult> toNotify = new ArrayList<>();
 
   /**
    * Temporal workflow will not allow to use injection in order to avoid
@@ -63,7 +61,7 @@ public class IufClassificationWFImpl implements IufClassificationWF, Application
       String iuv = transfer2ClassifyDTO.getIuv();
       String iur = transfer2ClassifyDTO.getIur();
       int transferIndex = transfer2ClassifyDTO.getTransferIndex();
-      startTransferClassificationActivity.signalTransferClassificationWithStart(toNotify.get(0).getOrganizationId(), iuv, iur, transferIndex);
+      startTransferClassificationActivity.signalTransferClassificationWithStart(toNotify.getFirst().getOrganizationId(), iuv, iur, transferIndex);
     });
 
   }
@@ -73,11 +71,11 @@ public class IufClassificationWFImpl implements IufClassificationWF, Application
   public void notifyTreasury(IufClassificationNotifyTreasurySignalDTO signalDTO) {
 
     log.info("Handling treasury notification in iuf classification: {}", signalDTO);
-    boolean clearedResult = clearClassifyIufActivity.deleteClassificationByIuf(
+    Long clearedResult = clearClassifyIufActivity.deleteClassificationByIuf(
       signalDTO.getOrganizationId(),
       signalDTO.getIuf());
 
-    log.info("IUF receipt classification cleared with result {} for {}", clearedResult, signalDTO);
+    log.info("IUF receipt classification cleared {} records for {}", clearedResult, signalDTO);
 
     IufClassificationActivityResult iufClassificationActivityResult = iufClassificationActivity.classify(signalDTO.getOrganizationId(), signalDTO.getTreasuryId(), signalDTO.getIuf());
     toNotify.add(iufClassificationActivityResult);
@@ -87,11 +85,11 @@ public class IufClassificationWFImpl implements IufClassificationWF, Application
   public void notifyPaymentsReporting(IufClassificationNotifyPaymentsReportingSignalDTO signalDTO) {
 
     log.info("Handling payments reporting notification in iuf classification: {}", signalDTO);
-    boolean clearedResult = clearClassifyIufActivity.deleteClassificationByIuf(
+    Long clearedResult = clearClassifyIufActivity.deleteClassificationByIuf(
       signalDTO.getOrganizationId(),
       signalDTO.getIuf());
 
-    log.info("IUF receipt classification cleared with result {} for {}", clearedResult, signalDTO);
+    log.info("IUF receipt classification cleared cleared {} records for {}", clearedResult, signalDTO);
 
     toNotify.add(IufClassificationActivityResult.builder()
       .organizationId(signalDTO.getOrganizationId())
